Add /activity-feed
Also move namespace_kpi_history to the reports section
