# legacy/imbi-api/imbi/endpoints/reports/__init__.py
@@ -4,8 +4,11 @@ System Reports
 """
 from tornado import web
 
-from . import namespace_kpis
+from . import namespace_kpi_history, namespace_kpis
 
 URLS = [
-    web.url(r'/reports/namespace-kpis', namespace_kpis.RequestHandler)
+    web.url(r'/reports/namespace-kpi-history',
+            namespace_kpi_history.RequestHandler),
+    web.url(r'/reports/namespace-kpis',
+            namespace_kpis.RequestHandler)
 ]
